--- a/WebSite/WebSite/Css/fw.css
+++ b/WebSite/WebSite/Css/fw.css
@@ -1,10 +1,11 @@
 html, body {
-    min-height:100%;    
+    min-height:100%;
+    color:#333;    
 }
 *{
     margin:0;
     padding:0;
-    outline:none;color:#6F7276;
+    outline:none;
     font-size:12px;
 }
 table {
