--- a/WebSite/WebSite/Css/fw.css
+++ b/WebSite/WebSite/Css/fw.css
@@ -1,11 +1,10 @@
 html, body {
-    min-height:100%;
-    color:#333;    
+    min-height:100%;    
 }
 *{
     margin:0;
     padding:0;
-    outline:none;
+    outline:none;color:#6F7276;
     font-size:12px;
 }
 table {
