--- a/WebSite/WebSite/Css/style.css
+++ b/WebSite/WebSite/Css/style.css
@@ -64,13 +64,40 @@
 .ct-lists-tt{ border-bottom: solid 1px #d2d2d2; margin: 0px 30px;}
 .ct-tps-btn { width: 165px; height: 48px; line-height: 48px; font-size: 18px; font-family: "微软雅黑"; margin: 20px 0px 0px 30px; text-align: center; color: #fff; background: #6091ba;display: inline-block;}
 
-.page-cont{ padding: 20px 0px;}
+.page-cont{ padding: 20px;}
 .page-lt{ width: 800px; float: left;}
-.page-rt{ width:350px; float: right;}
+.page-rt{ width:252px; float: right;}
 .page-hd-img{ width: 800px; height: 200px;}
 .page-tt{ border-bottom: 1px solid #e8e8e8; margin-bottom: 30px; height: 48px;}
 .page-h1{ font-size: 28px; color: #333; font-family: "黑体";}
 .page-menu{ margin-top: 25px;}
 .page-menu a{ margin: 5px;}
 .page-cont-txt{ line-height: 25px;}
-.page-block{ font-size: 24px; line-height: 40px;}
+.page-block-tt{ font-size: 20px; padding-bottom: 15px;}
+.page-block{ margin-bottom: 20px;}
+.page-block-link{ font-size: 14px; display: block; line-height: 30px; font-weight: bold; }
+.gd-stu-ul li{ overflow: hidden; margin-bottom: 25px;}
+.gd-stu-info{ margin-left: 200px;}
+.gd-stu-info h3, .h3-tt{ font-size: 20px; margin-bottom: 10px;}
+.gd-stu-info h4, .h4-tt{ font-size: 18px; margin-bottom: 10px;}
+.gd-stu-info p{ line-height: 25px;}
+.stu-act-month{ width: 50px; height:25px; line-height: 25px; background:#6091ba; font-size: 16px; text-align: center; color:#fff; margin: 0px 20px;}
+.stu-act-day{ width: 50px; height: 40px; line-height: 40px; background:#f5f5f5; font-size: 12px; text-align: center; margin: 0px 20px;}
+.stu-act-info{ margin-left: 100px;}
+.h5-tt{ font-size: 14px;}
+.time-bg{}
+.lin25{ line-height: 25px;}
+.stu-act-ul li{ overflow: hidden; margin-bottom: 25px;}
+.ke-list-info{ margin-left: 120px; line-height: 25px;}
+.kc-list-name{ color: #6091ba; font-size: 18px; font-weight: bold;}
+.kc-list-name:hover{ }
+.other-link{ color:#fff; background: #84aac9; font-size: 12px; padding: 2px 15px; margin-top: 5px; display: inline-block;}
+.other-link:hover{ background: #84AAC9; color: #fff; text-decoration: none;}
+.down-link{ display: block; padding: 5px; border: 1px solid #e6e6e6;}
+.down-link img{ width: 250px; height: 150px;}
+.down-ul li{ float: left; text-align: center; line-height: 30px; font-size: 14px; font-weight: bold; margin: 0px 10px 10px 10px;}
+.job-dl{ border: 1px solid #DDDDDD; line-height: 25px; border-bottom: none; border-radius: 2px; margin-bottom: 30px;}
+.job-dl dt h2{ font-size: 14px; font-weight: bold;}
+.job-dl dt,.job-dl dd{ border-bottom: 1px solid #DDDDDD; padding: 5px 10px;}
+.job-dl dt{ background: #F5F5F5;}
+.ablue{ color: #609DCE;}
